update java profile